--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <div class = "container">
+        <div class = "square"></div>
+    </div>
 </body>
 <script src="./scripts.js"></script>
 </html>
