--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <button class = "reset button">Reset Grid</button>
     <div class = "container">
     </div>
 </body>
